--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
           </li>
         </ul>
       </div>
-      <a href="#contact" class="btn btn-primary">Me Contacter</a>
+      <a href="https://wa.me/+22966250425" class="btn btn-primary">Me Contacter</a>
     </div>
   </nav>
 
