--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <a class="nav-link" href="#gallery">Galerie</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#workshop">Ateliers</a>
+            <a class="nav-link" href="#workshops">Ateliers</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#testimonials">Témoignages</a>
